navStyles.css
nav{
  background-color: black;
  width: 100vw;
  height: 8vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-wrap: wrap;
  justify-content: center;
  
  

  
}
.title{
   
   margin-left: 2vw;  
  align-self: flex-start;
  
}

#title{
    position: relative;
    display: inline-block;
    margin-bottom: 1rem;
    
    font-family: Verdana, Tahoma, sans-serif;
    font-size: 2em;
    font-weight: 700;
    color: #dfdfdf;
    text-shadow: 0 2px 2px #dfdfdf, 
      -2px 5px 1px #b8b8b8, 
      -4px 8px 0px #979797, 
      -6px 11px 0px #747474,
      -8px 14px 0px #565656,
      -10px 17px 0px #343434,
      -12px 20px 0px #171717,
      -14px 23px 0px #000;
}




 #title:hover{
    animation: 8s shake infinite alternate;
    
    
} 

@keyframes shake {
  0% { transform: skewX(-15deg); }
  5% { transform: skewX(15deg); }
  10% { transform: skewX(-15deg); }
  15% { transform: skewX(15deg); }
  20% { transform: skewX(0deg); }
  100% { transform: skewX(0deg); }  
} 


.nav-btn{
  background-color: rgb(21, 182, 56) !important;
  border-radius: 0 20% 20% 0 !important;
  width: 3vw;
  height: 4vh;
  border: 1px solid transparent ;
  
  background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat center;
  opacity: 0.8;
  cursor: pointer;
}

.nav-btn:hover{
  opacity: 1;
}

.arrow-down{
  border: solid black;
  border-width: 0 2px 2px 0;
  display: inline-block;
  padding: 3px;
  transform: rotate(45deg) translateY(-50%);
}



.nav-collapse2{
  transform: translateX(40%);
  
  
}

.nav-collapse2 .dropdown-menu{
  background-color: rgb(3, 0, 0);
  transform: translateY(12%) translateX(-30%);
  
  
}

.dropdown-menu a[href*="/"]{
  color: #dfdfdf;
}
.dropdown-menu a:hover{
  background-color: black;
}

.isDisabled{
  cursor: not-allowed;
  
  color: red !important;
  
}


.blurScreenOnSearch{
  filter: blur(1.5px);
  pointer-events: none;
  user-select:none;
  
}

.collapseToTheSide{
  transform: translateX(-15%);
}

#nav-input{
  
  padding-top: 5px ;
  padding-bottom: 5px;
  
  text-align: left;
  width: 30vw;
  height: 4vh;
  outline: none;
  float: left;
  border: 1px solid gray;
  border-radius: 10% 0 0 10%;
}

.nav-collapse:nth-of-type(2){
  
  align-self: flex-end;
  
}
#dropdown-btn{
  background-color: rgb(21, 182, 56);
  border-radius: 20%;
  color: black;
  font-weight: 500;
 
  
}




.menu-1{
  display: block !important;
  
  transform: translateX(-30%);
}


.dropdown-item{
  font-weight: 400 !important;
  
}

.dropdown-menu a::before {
  content: '';
  display: block;
  height: 5px;
  background-color: rgb(21, 182, 56);

  position: relative;
  top: 0;
  width: 0%;

  transition: all ease-in-out 250ms;
}

.dropdown-menu a[href*="/"]:hover::before {
  width: 80%;
}



@media screen and (min-width:769px) and (max-width: 1200px){
  #dropdown-btn{
    transform: scale(0.8,1);
  }
}

@media screen and (min-width:0px) and (max-width: 768px){
  body{
    
    overflow: hidden;
  }

  nav{
    flex-direction: column;
    align-items: flex-end;
    justify-content: center;
    
  }

  .title{
    align-self: center;
    
  }

  #title{
    font-size: 1.8em;
  }

  .nav-collapse1{
    
    
    position: absolute;
    top:2%;
    right: 5%;
    border: 1px solid black;
    border-radius: 0 10% 10% 0;
    max-height: 4vh;
  }
  .nav-collapse2{
    
    
    position: absolute;
    width: 50%;
    top:8vh;
    left: 0px;
    height: 40%;
    transform: translateX(-100%);
  }

  
  
  .dropdown-menu{
    display: block !important;
    transform: translateX(0);
    width: 100%;
    height: 100%;
    background-color: #474545 !important;
    border: 1px solid black !important;
    
    
  }

  .dropdown-item{
    color: white !important;
    font-size: 20px;
    line-height: 2em;

    opacity: 0;
  }

  @keyframes dropdownItemsAnimation{
    from{
      opacity: 0;
      transform: translateX(-50px);
    }
    to{
      opacity: 1;
      transform: translateX(0);
    }
  }

  .dropdown-item:hover{
    background-color: inherit !important;
  }

  .isDisabled{
    color: red !important;
  }
  
  #dropdown-btn{
    display: none;
  }
  #nav-input{
    /* display: none; */
    position: absolute;
    right: -60%;
    top: 6vh;
    width: 15em;
    border-radius: 0;
    border: 2px solid black;
    transform: translateX(150%);
  }

  .toggle{
    transform: translateX(0%) !important;
    transition: transform 0.5s ease-in-out;
  }

  

  .nav-btn{
    
    width: 8vw;
    border-radius: 20% !important;
    
  }

  
  #dropdown-btn{
    max-height: 4vh;
  }

  
  .toggler{
    position: absolute;
   top: 20px;
   left: 20px;
   cursor: pointer;
  }
  .toggler div{
   
    background-color: white;
    
    width: 25px;
    height: 3px;
    margin:5px;
  }

  .toggle .line1{
    transform: rotate(-45deg) translate(-5px,6px);
  }
  .toggle .line2{
    opacity: 0;
  }
  .toggle .line3{
    transform: rotate(45deg) translate(-5px,-6px);

  }

  .toggler-active{
    transform: translateX(0%);
    transition: transform 0.5s ease-in;
  }



  
}












  




  
  

